# aronb0201

./: README.md
practice/arrays/01/: CMakeLists.txt  main.cpp
practice/arrays/02/: main.cpp
practice/functions/01/: main.cpp
practice/functions/02/: main.cpp
practice/functions/03/: main.cpp
practice/functions/04/: CMakeLists.txt  main.cpp
practice/stdmap/01/: main.cpp
week_01/day_02/animalsandlegs/: CMakeLists.txt  main.cpp
week_01/day_02/averageofinput/: CMakeLists.txt  main.cpp
week_01/day_02/bmi/: main.cpp
week_01/day_02/codinghours/: main.cpp
week_01/day_02/conditional_variable_mutation/: CMakeLists.txt  main.cpp
week_01/day_02/countfromto/: CMakeLists.txt  main.cpp
week_01/day_02/cuboid/: main.cpp
week_01/day_02/define_basic_info/: main.cpp
week_01/day_02/draw_triangle/: CMakeLists.txt  main.cpp
week_01/day_02/favouritenumber/: CMakeLists.txt  main.cpp
week_01/day_02/fizz_buzz/: CMakeLists.txt  main.cpp
week_01/day_02/guess_the_number/: CMakeLists.txt  main.cpp
week_01/day_02/hellome/: CMakeLists.txt  main.cpp
week_01/day_02/helloothers/: CMakeLists.txt  main.cpp
week_01/day_02/humptydumpty/: main.cpp
week_01/day_02/i_wont_cheat_on_the_exams.cpp/: CMakeLists.txt  main.cpp
week_01/day_02/introduce/: CMakeLists.txt  main.cpp
week_01/day_02/milestokm/: CMakeLists.txt  main.cpp
week_01/day_02/multipication_table/: CMakeLists.txt  main.cpp
week_01/day_02/odd_even/: main.cpp
week_01/day_02/one_two_alot/: CMakeLists.txt  main.cpp
week_01/day_02/parametric_average/: CMakeLists.txt  main.cpp
week_01/day_02/partyindicator/: main.cpp
week_01/day_02/print_bigger/: main.cpp
week_01/day_02/print_even/: CMakeLists.txt  main.cpp
week_01/day_02/secondsinaday/: CMakeLists.txt  main.cpp
week_01/day_02/swap/: main.cpp
week_01/day_02/twonumbers/: CMakeLists.txt  main.cpp
week_01/day_02/variable_muatation/: CMakeLists.txt  main.cpp
week_02/day_01/append_a/: main.cpp
week_02/day_01/append_a_func/: main.cpp
week_02/day_01/change elements/: CMakeLists.txt  main.cpp
week_02/day_01/change_element/: main.cpp
week_02/day_01/colors/: main.cpp
week_02/day_01/compare-length/: main.cpp
week_02/day_01/diagonal_matrix/: CMakeLists.txt  main.cpp
week_02/day_01/double_items/: main.cpp
week_02/day_01/doubleitems/: main.cpp
week_02/day_01/doubling/: main.cpp
week_04/day_01/copy_file/: CMakeLists.txt  copy.txt  main.cpp  paste.txt
week_04/day_02/counter/: CMakeLists.txt  Counter.cpp  Counter.h  main.cpp
week_04/day_02/fleet_of_things/: CMakeLists.txt  main.cpp
week_05/day_03/animals_in_the_zoo/: Animal.cpp  Animal.h  Birds.cpp  Birds.h  CMakeLists.txt  Mammal.cpp  Mammal.h  Reptile.cpp  Reptile.h  main.cpp
week_05/day_03/instruments/: BassGuitar.cpp  BassGuitar.h  CMakeLists.txt  ElectricGuitar.cpp  ElectricGuitar.h  Instrument.cpp  Instrument.h  StringedInstrument.cpp  StringedInstrument.h  Violin.cpp  Violin.h  main.cpp
week_05/day_04/anagram_test/anagram/anagram_test/: CMakeLists.txt  anagram_test.cpp
week_06/are_the_same/: main.c
week_06/equal/: main.c
week_06/guess_the_number/: main.c
week_06/hello_others/: CMakeLists.txt
week_06/introduceyouself/: CMakeLists.txt
week_06/odd_or_even/: CMakeLists.txt  main.c
week_06/sum_of_digits/: CMakeLists.txt  main.c
week_06/two_numbers/: CMakeLists.txt
week_06/untitled/: main.c
week_06/where_it_is/: main.c
(+236 files in other folders)
